Agregación de nueva clase
Se agregan nuevas clases .login-font-welcome, .login-font-user para dar color al mensaje de Bienvenida al usuario.

--- a/myCss/myStyle.css
+++ b/myCss/myStyle.css
@@ -745,6 +745,14 @@ footer{
     text-align: center;
 }
 
+.login-font-welcome{
+    color: var(--color3);
+}
+
+.login-font-user{
+    color: var(--color4);
+}
+
 .panel-form-login{    
     display: flex;
     justify-content: center;
